<resources>
    <string name="app_name">Nest</string>
    <string name="autofiiHints" />

    //导航页
    <string name="guide_text_hint">开启巢之旅</string>

    //登录界面
    <string name="sign_in">登录</string>
    <string name="sign_in_phone_text_hint">您的手机号码</string>
    <string name="sign_in_pwd_text_hint">您的登录密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="to_sign_up">注册账号</string>
    <string name="other_sign_in">其他登录方式</string>

    //注册界面
    <string name="sign_up_title">注册</string>
    <string name="sign_up_phone_text_hint">手机号码</string>
    <string name="sign_up_pwd_text_hint">登录密码(8-16位数字字母密码组合)</string>
    <string name="sign_up_verification_text_hint">验证码</string>
    <string name="sign_up">立即注册</string>
    <string name="verification">发送验证码</string>
    <string name="back">返回</string>

    //Home
    <string name="home_page_title">主页</string>
    <string name="community_page_title">社区</string>
    <string name="health_page_title">健康</string>
    <string name="person_page_title">个人</string>

    <string name="home_contacts">家人</string>
    <string name="home_chats">聊天</string>
    <string name="home_calendar">日历</string>
    <string name="home_gift">礼物</string>
</resources>
