<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    tools:context=".SignupPage">

    <ImageView
        android:id="@+id/topBar"
        android:background="#dbff2d75"
        android:layout_width="fill_parent"
        android:layout_height="80.0dip"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="16.0sp"
        android:textColor="#ffffffff"
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:textSize="16.0sp"
        android:textColor="@drawable/btn_shadow"
        android:id="@+id/backButton"
        android:background="#00000000"
        android:layout_width="60.0dip"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <com.example.nest.PhoneEditText
        android:gravity="center"
        android:id="@+id/phoneText_up"
        android:layout_width="300.0dip"
        android:layout_height="50.0dip"
        android:inputType="phone"
        android:hint="@string/sign_up_phone_text_hint"
        android:maxLength="13"
        android:autofillHints="@string/autofiiHints"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:gravity="center"
        android:id="@+id/verificationText"
        android:layout_width="300.0dip"
        android:layout_height="50.0dip"
        android:hint="@string/sign_up_verification_text_hint"
        android:maxLength="6"
        android:inputType="phone"
        android:autofillHints="@string/autofiiHints"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:gravity="center"
        android:id="@+id/pwdText_up"
        android:layout_width="300.0dip"
        android:layout_height="50.0dip"
        android:hint="@string/sign_up_pwd_text_hint"
        android:maxLength="16"
        android:inputType="textPassword"
        android:autofillHints="@string/autofiiHints"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:textColor="@drawable/btn_shadow"
        android:id="@id/signupButton"
        android:background="@drawable/shape_radius"
        android:layout_width="150.0dip"
        android:layout_height="60.0dip"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:textColor="@drawable/btn_shadow_reverse"
        android:id="@+id/verificationButton"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="30.0dip"
        android:text="@string/verification"
        app:layout_constraintBottom_toBottomOf="@id/verificationText"
        app:layout_constraintEnd_toEndOf="@id/verificationText"
        app:layout_constraintHorizontal_bias="1.02"
        app:layout_constraintStart_toStartOf="@id/verificationText"
        app:layout_constraintTop_toTopOf="@id/verificationText" />

    <ImageButton
        android:id="@id/inVisibleButton"
        android:background="@drawable/invisible"
        android:layout_width="30.0dip"
        android:layout_height="30.0dip"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/pwdText_up"
        app:layout_constraintEnd_toEndOf="@id/pwdText_up"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pwdText_up"
        app:layout_constraintVertical_bias="0.25" />

    <ImageButton
        android:id="@id/visibleButton"
        android:background="@drawable/visible"
        android:layout_width="30.0dip"
        android:layout_height="30.0dip"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/pwdText_up"
        app:layout_constraintEnd_toEndOf="@id/pwdText_up"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pwdText_up"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>